Fixed alignment of chainlink-nodes cards

--- a/src/features/landing/styles/EthereumLandingPage.module.css
+++ b/src/features/landing/styles/EthereumLandingPage.module.css
@@ -1,13 +1,7 @@
 .productCardGrid {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
   gap: var(--space-4x);
-}
-
-@media (min-width: 50em) {
-  .productCardGrid {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
 }
 
 .cardTitle {
